# minesweeper

./: .clang-format  CMakeLists.txt
src/: main.c
